@@ -25,6 +25,9 @@ argp-version-etc
 attribute
 backupfile
 c-ctype
+c32rtomb
+c32tolower
+c32toupper
 closeout
 configmake
 dirname
@@ -64,6 +67,7 @@ lchown
 linkat
 localcharset
 manywarnings
+mbrtoc32-regular
 mcel-prefer
 mkdirat
 mkdtemp
